--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1, h2, h3 {
-    color: #333;
+    color: #333; /* Default heading color, will be overridden in header */
 }
 
 a {
@@ -45,13 +45,14 @@ a:hover {
 /* Header styles */
 header {
     background-color: #333;
-    color: #fff;
+    color: #fff; /* Header text color changed to white */
     padding: 20px 0;
     text-align: center;
 }
 
-header h1 {
+header h1, header h2 {
     margin-bottom: 5px;
+    color: #fff; /* Ensures h1 and h2 in header are white */
 }
 
 /* About section styles */
