--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* General styles */
+er/* General styles */
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
@@ -121,6 +121,6 @@ footer {
   height: 150px; /* Adjust the height as needed */
   border-radius: 50%; /* Create a circular shape */
   object-fit: cover; /* Ensure the image covers the circular area */
-  float: left; /* Align the photo to the left */
+  float: center; /* Align the photo to the left */
   margin-right: 20px; /* Add some space to the right of the photo */
 }
