--- a/style.css
+++ b/style.css
@@ -121,6 +121,6 @@ footer {
   height: 150px; /* Adjust the height as needed */
   border-radius: 50%; /* Create a circular shape */
   object-fit: cover; /* Ensure the image covers the circular area */
-  float: center; /* Align the photo to the left */
+  float: center; /* Align the photo to the center */
   margin-right: 20px; /* Add some space to the right of the photo */
 }
