--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a:hover {
 }
 
 .button {
-    display: block;
+    display: block; /*inline-*/
     background-color: #0077cc;
     color: #fff;
     padding: 10px 20px;
