--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 er/* General styles */
 body {
-    font-family: 'Roboto', sans-serif; /*'Arial', sans-serif;*/
+    font-family: 'Arial', sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
